--- a/frontend-integrity-ci/action.yaml
+++ b/frontend-integrity-ci/action.yaml
@@ -20,6 +20,12 @@ runs:
       run: echo '${{ inputs.auth_json }}' > auth.json
       working-directory: ./main
 
+    - uses: 8BitJonny/gh-get-current-pr@1.4.0
+      id: PR
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        sha: ${{ github.event.pull_request.head.sha }}
+        filterOutClosed: true
     - name: get frontend branch from pr comment
       shell: bash
       id: get-frontend-branch
