feat: add permission

--- a/phpstan-ci/action.yaml
+++ b/phpstan-ci/action.yaml
@@ -1,12 +1,20 @@
 name: CI / Rector
 description: 'Run Php stan'
-
+inputs:
+  token:
+    description: 'The GitHub authentication token'
+    default: ${{ github.token }}
 runs:
   using: 'composite'
   steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+        with:
+          # Solves the not "You are not currently on a branch" problem, see https://github.com/actions/checkout/issues/124#issuecomment-586664611
+          ref: ${{ github.event.pull_request.head.ref }}
+          # Must be used to trigger workflow after push
+          token: ${{ inputs.token }}
+
       - uses: shivammathur/setup-php@v2
         with:
           php-version: 8.1
