fix frontend integrity regex

--- a/frontend-integrity-ci/action.yaml
+++ b/frontend-integrity-ci/action.yaml
@@ -32,7 +32,7 @@ runs:
     - name: Get frontend branch from PR description
       shell: bash
       id: get-frontend-branch
-      run: 'echo ::set-output name=frontend-branch::$(BRANCH_REG=$(echo $PRBODY|tr -d ''\n''|sed -E ''s/(.*)front branch: \[(.*)\](.*)/\2/g'');if [[ $BRANCH_REG =~ ^[0-z_/\.-]+$ ]];then echo $BRANCH_REG;else echo ''master''; fi)'
+      run: 'echo ::set-output name=frontend-branch::$(BRANCH_REG=$(echo $PRBODY|tr -d ''\n''|sed -E ''s/.*front branch: \[([_[:alnum:]-]+).*/\1/g'');echo $BRANCH_REG)'
       env:
         PRBODY: ${{ steps.PR.outputs.pr_body }}
 
